2011-11-29 belangeo <belangeo@gmail.com>

    * Added new object: Iter. Triggers iterate over a list of user-defined values.
    - rev 784

2011-11-26 belangeo <belangeo@gmail.com>

    * Added new object: Vectral. Performs magnitude smoothing between successive frames.
    - rev 782

2011-11-23 belangeo <belangeo@gmail.com>

    * Added server's attribute : globalseed. An int used as the seed by random objects. Can be changed multiple times inside a script.
    - rev 778

2011-11-22 belangeo <belangeo@gmail.com>

    * Added new object: RandDur. Recursive time varying pseudo-random generator.
    - rev 776

2011-11-22 belangeo <belangeo@gmail.com>

    * Added new object: Timer. Reports elpased time between two triggers.
    - rev 772

2011-11-15 belangeo <belangeo@gmail.com>

    * Added mouse callback to SndTable.view method to allow simple scrubbing.
    - rev 763

2011-11-09 belangeo <belangeo@gmail.com>

    * midiToHz and midiToTranspo now accept list or tuple in input.
    - rev 759

2011-11-04 belangeo <belangeo@gmail.com>

    * Snap takes choice on more than one octave.
    - rev 754

2011-10-27 belangeo <belangeo@gmail.com>

    * Added new object: MToF. Midi to frequency conversion.
    - rev 748

2011-10-26 belangeo <belangeo@gmail.com>

    * Added new objects: CentsToTranspo and TranspoToCents. Cents/transposition factor conversions.
    - rev 747

2011-10-26 belangeo <belangeo@gmail.com>

    * Added new object: Scale. Maps an input range of audio values to an output range.
    - rev 746

2011-10-25 belangeo <belangeo@gmail.com>

    * Added new objects: DBToA and AToDB. Amplitude/decibel conversions.
    - rev 745

2011-10-22 belangeo <belangeo@gmail.com>

    * Added "append" and "insert" methods to SndTable object.
    - rev 740

2011-10-13 belangeo <belangeo@gmail.com>

    * Added new objects : Touchin : Get the current value of the after-touch controller. Programin : Get the current value of a program change controller.
    - rev 730
