@@ -57,6 +57,7 @@
 #define TYPE_OO_FI "OO|fi"
 #define TYPE_OO_IF "OO|if"
 #define TYPE_OOO_F "OOO|f"
+#define TYPE_OOO_FFFFII "OOO|ffffii"
 #define TYPE_F_O "f|O"
 #define TYPE_F_OF "f|Of"
 #define TYPE__OFFI "|Offi"
@@ -127,6 +128,7 @@
 #define TYPE_OO_FI "OO|di"
 #define TYPE_OO_IF "OO|id"
 #define TYPE_OOO_F "OOO|d"
+#define TYPE_OOO_FFFFII "OOO|ddddii"
 #define TYPE_F_O "d|O"
 #define TYPE_F_OF "d|Od"
 #define TYPE__OFFI "|Oddi"
